2009-07-26 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* Update to major release 0.2.2

2009-07-09 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
	* FS#15431  fixed in 0.2.1-3