@@ -4,39 +4,41 @@
 
 pkgname=adesklet-weatherforecast
 pkgver=0.2.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Extended weather desklet that shows three day forecast."
-arch=('i686' 'x86_64')
+arch=('any')
 url="http://adesklets.sourceforge.net/desklets.html"
 license=('GPL2')
 depends=('adesklets')
 groups=('adesklet-desklets')
+changelog=ChangeLog
 source=(http://downloads.sourceforge.net/sourceforge/adesklets/weatherforecast-${pkgver}.tar.bz2 \
         liquid_45.png \
         liquid_46.png \
         liquid_47.png \
         um_46.png)
-
-md5sums=('fd647ecc0306c0d1e847adab8bcfb685'
-         '781f726262f44a15eeec95f46ceb5a51'
-         '824139567bc469d6193aa31e9343e339'
-         'd70bc9d3d2acd5d488e51e2eb4c73c7e'
+md5sums=('fd647ecc0306c0d1e847adab8bcfb685' '781f726262f44a15eeec95f46ceb5a51'\
+         '824139567bc469d6193aa31e9343e339' 'd70bc9d3d2acd5d488e51e2eb4c73c7e'\
          '176f9011299b32663455ae9de5122d31')
+sha1sums=('358708767fe6c96e00302e3180b91e0ba23d2d4e' 'cc586a215608b67865d4e764636d6cee6a945a14'\
+         '7f96a4e970b6795a14e7f8a21e5d7849fea28924' '28984756e219fb55cf0fdedb338c50b954703ef8'\
+         '18152f522dbd71947b27ceb9ec4c03928a8bab67')
 
-build() {
-  cd ${srcdir}
-  install -d ${pkgdir}/usr/share/adesklets/weatherforecast || return 1
+package() {
+  cd "${srcdir}"
+  install -d "${pkgdir}/usr/share/adesklets/weatherforecast"
 
-  cp -a ${srcdir}/weatherforecast-${pkgver}/* ${pkgdir}/usr/share/adesklets/weatherforecast/ || return 1
+  cp -a "${srcdir}"/weatherforecast-${pkgver}/* "${pkgdir}/usr/share/adesklets/weatherforecast/"
+  sed -i 's|/usr/bin/env python|/usr/bin/env python2|' "${pkgdir}/usr/share/adesklets/weatherforecast/weatherforecast.py"
 
 #Fixing missing icons
-  cp ${srcdir}/weatherforecast-$pkgver/icons/liquid/25.png ${pkgdir}/usr/share/adesklets/weatherforecast/icons/liquid/na.png || return 1
-  cp ${srcdir}/liquid_45.png ${pkgdir}/usr/share/adesklets/weatherforecast/icons/liquid/45.png || return 1
-  cp ${srcdir}/liquid_46.png ${pkgdir}/usr/share/adesklets/weatherforecast/icons/liquid/46.png || return 1
-  cp ${srcdir}/liquid_47.png ${pkgdir}/usr/share/adesklets/weatherforecast/icons/liquid/47.png || return 1
-  cp ${srcdir}/weatherforecast-$pkgver/icons/um/25.png ${pkgdir}/usr/share/adesklets/weatherforecast/icons/um/na.png || return 1
-  cp ${srcdir}/um_46.png ${pkgdir}/usr/share/adesklets/weatherforecast/icons/um/46.png || return 1
+  cp "${srcdir}/weatherforecast-$pkgver/icons/liquid/25.png" "${pkgdir}/usr/share/adesklets/weatherforecast/icons/liquid/na.png"
+  cp "${srcdir}/liquid_45.png" "${pkgdir}/usr/share/adesklets/weatherforecast/icons/liquid/45.png"
+  cp "${srcdir}/liquid_46.png" "${pkgdir}/usr/share/adesklets/weatherforecast/icons/liquid/46.png"
+  cp "${srcdir}/liquid_47.png" "${pkgdir}/usr/share/adesklets/weatherforecast/icons/liquid/47.png"
+  cp "${srcdir}/weatherforecast-$pkgver/icons/um/25.png" "${pkgdir}/usr/share/adesklets/weatherforecast/icons/um/na.png"
+  cp "${srcdir}/um_46.png" "${pkgdir}/usr/share/adesklets/weatherforecast/icons/um/46.png"
 
-  chown root:adesklets ${pkgdir}/usr/share/adesklets/weatherforecast || return 1
-  chmod 775 ${pkgdir}/usr/share/adesklets/weatherforecast || return 1
+  chown root:adesklets "${pkgdir}/usr/share/adesklets/weatherforecast"
+  chmod 775 "${pkgdir}/usr/share/adesklets/weatherforecast"
 }
