@@ -1,3 +1,8 @@
+2010-10-05  Eric Belanger  <eric@archlinux.org>
+
+	* python2 rebuild
+	* switch to 'any' arch
+
 2009-07-26 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
 	* Update to major release 0.2.2
 
